--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,13 @@
 
     <table>
         <tbody>
+        <th>Helpful KeyWords</th>
         {% for item in helpWords %}
-            <tr>{{ item[0] }}</tr>
-            <tr>{{ item[1] }}</tr>
+            <tr>
+                <td>{{ item[0] }}</td>
 
+                <td>{{ item[1] }}</td>
+            </tr>
         {% endfor %}
         </tbody>
     </table>
