Added css to index and updated the app to reflect the logic of CLI interface

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,61 @@
+<!-- This is for the help words table -->
+<style>
+    tbody tr.HelpWordsChild:nth-child(even){
+        background-color: cornflowerblue;
+
+    }
+
+    tbody tr td {
+        font-size: 1.25em;
+    }
+</style>
+
+<body style="margin: 2em; background-color: azure;">
+
+
+<div style="display:block; float: right;">
+    <table style="border-collapse: collapse;">
+        <tbody>
+        <th style="font-size: 1.5em; font-weight: bold">Helpful KeyWords</th>
+        {% for item in helpWords %}
+            <tr class="HelpWordsChild">
+                <td>{{ item[0] }}</td>
+
+                <td>{{ item[1] }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <table style="margin-top: 2em; border-collapse: collapse;">
+        <tbody>
+            <th>Glue Words</th>
+            <tr>
+                <td>of</td>
+                <td>Placed between two of the helpful keywords</td>
+            </tr>
+            <tr>
+                <td>by</td>
+                <td>When looking for songs by an artist</td>
+            </tr>
+            <tr>
+                <td>get</td>
+                <td>usually typed at the beginning of a query</td>
+            </tr>
+            <tr>
+                <td>and</td>
+                <td>Used to compare two or more items together</td>
+            </tr>
+        </tbody>
+
+    </table>
+</div>
+
 <h1>Welcome to the Team Top 50 Query Box</h1>
 <p>Please take a look at out query structure and follow</p>
 <p>Don't worry, we are pretty forgiving if you make a typo</p>
+<p>Ex. popularity of 'Shawn Mendes'</p>
+<p>Ex. danceability of 'Shape of You'</p>
 
 
 
@@ -10,22 +65,12 @@
 </form>
 
 
-    <table>
-        <tbody>
-        <th>Helpful KeyWords</th>
-        {% for item in helpWords %}
-            <tr>
-                <td>{{ item[0] }}</td>
 
-                <td>{{ item[1] }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
 
-{% for item in Query %}
-    <h1>{{item}}</h1>
-{% endfor %}
+
+<!-- This is for -->
+
+<h1>{{ query }}</h1>
 
 <table>
     <tbody>
@@ -40,15 +85,7 @@
 
 
 <div class="container">
-    <div class="chunk">
-        <p class="chunk-text">Top Artist</p>
-    </div>
-        <div class="chunk">
-        <p class="chunk-text">Popularity of</p>
-    </div>
-        <div class="chunk">
-        <p class="chunk-text">Danceability of</p>
-    </div>
+
 </div>
 
 <div class="photos-container">
@@ -65,3 +102,5 @@
         <img src="static/placeholder.png">
     </div>
 </div>
+
+</body>
