--- a/templates/index.html
+++ b/templates/index.html
@@ -70,21 +70,14 @@
 
 <!-- This is for -->
 
-<h1>{{ query }}</h1>
 
-<table>
-    <tbody>
-    {% for item in data %}
-    <tr>
-        <td>{{item[0]}}</td>
-
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
 
 
 <div class="container">
+    <h3>{{ query }}</h3>
+    {% for item in data %}
+        <h3>{{ item }}</h3>
+    {% endfor %}
 
 </div>
 
