--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
     tbody tr td {
         font-size: 1.25em;
     }
+
+
 </style>
 
 <body style="margin: 2em; background-color: azure;">
@@ -27,22 +29,22 @@
         </tbody>
     </table>
 
-    <table style="margin-top: 2em; border-collapse: collapse;">
+    <table style="margin-top: 2em; border-collapse: collapse; display: inline-block">
         <tbody>
-            <th>Glue Words</th>
-            <tr>
+            <th style="font-size: 1.5em; font-weight: bold">Glue Words</th>
+            <tr class="HelpWordsChild">
                 <td>of</td>
                 <td>Placed between two of the helpful keywords</td>
             </tr>
-            <tr>
+            <tr class="HelpWordsChild">
                 <td>by</td>
                 <td>When looking for songs by an artist</td>
             </tr>
-            <tr>
+            <tr class="HelpWordsChild">
                 <td>get</td>
                 <td>usually typed at the beginning of a query</td>
             </tr>
-            <tr>
+            <tr class="HelpWordsChild">
                 <td>and</td>
                 <td>Used to compare two or more items together</td>
             </tr>
@@ -54,8 +56,8 @@
 <h1>Welcome to the Team Top 50 Query Box</h1>
 <p>Please take a look at out query structure and follow</p>
 <p>Don't worry, we are pretty forgiving if you make a typo</p>
-<p>Ex. popularity of 'Shawn Mendes'</p>
-<p>Ex. danceability of 'Shape of You'</p>
+<p>Ex. popularity of 'Shawn Mendes' OR Ex. danceability of 'Shape of You'</p>
+
 
 
 
@@ -63,14 +65,6 @@
     <input type="text" name="submission" class="submitButton" id="query-text" placeholder="Enter Query..." style="max-width: 25%;" autofocus required>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
-
-
-
-
-
-<!-- This is for -->
-
-
 
 
 <div class="container">
@@ -81,19 +75,11 @@
 
 </div>
 
-<div class="photos-container">
-    <div class="team-pic">
-        <img src="static/placeholder.png">
-    </div>
-        <div class="team-pic">
-        <img src="static/placeholder.png">
-    </div>
-        <div class="team-pic">
-        <img src="static/placeholder.png">
-    </div>
-        <div class="team-pic">
-        <img src="static/placeholder.png">
-    </div>
-</div>
+
+
+<h2 style="margin-top: 5em;">Our Team Members</h2>
+<h4>Owen Anderson, Justin Adams, Eliot Heinrich, Matt Halligan</h4>
+
+
 
 </body>
