updates to the html to reflect functioning queries

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,8 @@
 <h1>Welcome to the Team Top 50 Query Box</h1>
 <p>Please take a look at out query structure and follow</p>
 <p>Don't worry, we are pretty forgiving if you make a typo</p>
-<p>Ex. popularity of 'Shawn Mendes' OR Ex. danceability of 'Shape of You'</p>
+<p>Ex. popularity 'Shawn Mendes' OR Ex. danceability of 'China'</p>
+<p>Ex. tempo 'Old Town Road ' OR Ex. genre 'Ransom'</p>
 
 
 
